aggiornamento package json

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start:dev":"nodemon",
     "build":"npm install && rimraf ./build && tsc",
-    "start":"nodemon index.js"
+    "start":"nodemon/index.js"
   },
   "keywords": [],
   "author": "",
