--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,19 @@
   "scripts": {
     "start:dev":"nodemon",
     "build":"npm install && rimraf ./build && tsc",
-    "start":"nodemon/index.js"
+    "start":"node build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "nodemon": "^2.0.20",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
   "dependencies": {
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
@@ -20,6 +28,8 @@
     "mongoose": "^7.5.3",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "@xata.io/client": "^0.21.3",
+    "node-fetch": "^3.2.10"
   }
 }
