--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "engines": {"node": ">=18"},
   "scripts": {
-    "start:dev":"nodemon",
-    "build":"npm install && rimraf ./build && tsc",
-    "start":"node build/index.js"
+    "start":"node index.js"
   },
   "keywords": [],
   "author": "",
